# overseer

./: .editorconfig  .gitignore  Cargo.toml  LICENSE  README.md  rustfmt.toml
oracle-sitter/: .prettierrc  binding.gyp  grammar.js  package-lock.json  package.json  pnpm-lock.yaml
oracle-sitter/bindings/node/: binding.cc  index.js
oracle-sitter/bindings/rust/: lib.rs
oracle-sitter/corpus/: current-test.txt  nacatl-savage.txt
oracle-sitter/src/: grammar.json  node-types.json  parser.c
oracle-writer/: .gitignore  AllPrintings.json:Zone.Identifier  index.ts  oracle.json:Zone.Identifier  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  tsconfig.json.ignore
oracle-writer/src/: escapeRegExp.ts  patch.spec.ts  patch.spec.ts.md  patch.spec.ts.snap  patch.ts  updateOracleFile.ts
rs/: .gitignore
rs/magistrate/: .gitignore  Cargo.toml
rs/magistrate/src/: lib.rs
rs/magistrate/src/actions/: draw.rs  mod.rs  mulligan_discard.rs  setup_library.rs  shuffle_deck_into_library.rs  shuffle_hand_into_library.rs  shuffle_library.rs  start_game.rs
rs/magistrate/src/cards/: mod.rs
rs/magistrate/src/cards/a/: alseid_of_lifes_bounty.rs  mod.rs
rs/magistrate/src/cards/basics/: mod.rs
rs/magistrate/src/cards/m/: metallic_sliver.rs  mod.rs
rs/magistrate/src/cards/s/: mod.rs  serum_powder.rs
rs/magistrate/src/effects/: draw.rs  meta.rs  mod.rs
rs/magistrate/src/interface_action/: mod.rs
rs/magistrate/tests/: regular.rs
rs/sandbox.tmp/: Cargo.toml  LICENSE_MIT
rs/sandbox.tmp/src/: lib.rs  traits.rs
rs/sandbox.tmp/src/traits/: action.rs  choose.rs
rs/sandbox.tmp/tests/: regular.rs  wasm.rs
rs/substrate/: Cargo.toml
rs/substrate/src/: lib.rs
rs/substrate_core/: Cargo.toml
rs/substrate_core/src/: lib.rs
rs/substrate_core/src/action/: mod.rs
rs/substrate_core/src/game/: card.rs  cardtype.rs  characteristics.rs  client_state.rs  color.rs  game.rs  gamestate.rs  mana_cost.rs  mod.rs  object.rs  object_color.rs  player.rs  server_state.rs  state.rs  target.rs  zone.rs
rs/substrate_core/src/game/cardtype/: subtype.rs
rs/substrate_core/src/interface/: choice.rs  decision.rs  mod.rs  prompt.rs  target.rs  viewable.rs
rs/substrate_core/src/interface/decision/: decision.rs  list.rs  mod.rs
rs/substrate_core/src/util/: handle.rs  mod.rs  pool.rs  shallow_clone.rs
rs/substrate_core/tests/: pool.rs  repr.rs  resolvable.rs  shallow_clone.rs
rs/substrate_macros/: Cargo.toml
rs/substrate_macros/src/: lib.rs  mana_cost.rs  type_line.rs
rs/substrate_macros/tests/: mana_cost.rs  type_line.rs
rs/util/: Cargo.toml
rs/util/src/: deps.rs  handle.rs  lib.rs  pool.rs
rs/util/src/pool/: entry.rs  handle.rs  item.rs  nonzerouuid.rs  pool.rs
rs/util/tests/: playground.rs  pool.rs
