[package]
name = "overseer_magistrate"
version = "0.1.0"
authors = ["Aaron Friel <mayreply@aaronfriel.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []
vanguard = ["overseer_substrate/vanguard"]
# default = ["console_error_panic_hook"]

[dependencies]
async-trait = "0.1.50"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.6", optional = true }
dyn_partial_eq = "0.1.2"
overseer_substrate = { path = "../substrate" }
serde = "1.0.110"
serde-diff = "0.4.1"
serde_derive = "1.0.110"
serde_json = "1.0.53"
wasm-bindgen = "0.2.69"

# `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
# compared to the default allocator's ~10K. It is slower than the default
# allocator, however.
#
# Unfortunately, `wee_alloc` requires nightly Rust when targeting wasm for now.
wee_alloc = { version = "0.4.5", optional = true }

[dependencies.typetag]
git = "https://github.com/AaronFriel/typetag"
features =["runtime"]
default-features = false

[dev-dependencies]
wasm-bindgen-test = "0.3.20"
