[package]
authors = ["Aaron Friel <mayreply@aaronfriel.com>"]
edition = "2018"
name = "overseer_substrate_core"
version = "0.1.0"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
client = []
default = ["server"]
server = []
vanguard = []

[dependencies]
bitflags = "^1.2.1"
cfg-if = "^1.0.0"
dyn-clonable = "~0.9.0"
dyn_partial_eq = "~0.1.2"
im = {version = "^15.0.0", features = ["serde"]}
lazy_static = "^1.4.0"
overseer_util = {path = "../util"}
serde = {version = "^1.0.125", features = ["derive"]}
serde_json = "^1.0.64"
smallvec = "1.7.0"
strum = {version = "~0.21.0", features = ["derive"]}
tracing = "~0.1.26"
typetag = "~0.2.1"
crossbeam = "0.8.2"

[dependencies.serde-diff]
features = ["im", "smallvec"]
git = "https://github.com/AaronFriel/serde-diff"
rev = "ccef091feda60c0d195e7e87217933aef62c0f05"

[dev-dependencies]
insta = "^1.8.0"
serde_yaml = "~0.8.17"
tracing-subscriber = "~0.3"
