[package]
name = "overseer_substrate_macros"
version = "0.1.0"
authors = ["Aaron Friel <mayreply@aaronfriel.com>"]
edition = "2018"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "^1.0.41"
overseer_substrate_core = { path = "../substrate_core" }
proc-macro2 = "^1.0"
quote = "^1.0"
syn = { version = "^1.0", features = ["full"] }

[dev-dependencies]
overseer_substrate = { path = "../substrate" }

[lib]
proc-macro = true
