[package]
name = "overseer_util"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nonzero_ext = "0.2.0"
serde = "1.0.126"

[dependencies.serde-diff]
git = "https://github.com/AaronFriel/serde-diff"
features = ["im", "smallvec"]
rev = "ccef091feda60c0d195e7e87217933aef62c0f05"
